// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Button default 1`] = `
.c0 {
  border: none;
  border-radius: 5px;
  background-color: #000000;
  color: #FFFFFF;
  text-transform: uppercase;
  font-weight: 600;
  min-width: 160px;
  height: 45px;
  cursor: pointer;
}

.c0:disabled {
  cursor: default;
  background-color: #f0f0f0 color:#6b7882;
}

<button
  className="c0"
>
  Test
</button>
`;

exports[`Button disabled 1`] = `
.c0 {
  border: none;
  border-radius: 5px;
  background-color: #000000;
  color: #FFFFFF;
  text-transform: uppercase;
  font-weight: 600;
  min-width: 160px;
  height: 45px;
  cursor: pointer;
}

.c0:disabled {
  cursor: default;
  background-color: #f0f0f0 color:#6b7882;
}

<button
  className="c0"
  disabled={true}
>
  Test
</button>
`;

exports[`Button outlined 1`] = `
.c0 {
  border: 1px solid #000000;
  border-radius: 5px;
  background-color: #FFFFFF;
  color: #000000;
  text-transform: uppercase;
  font-weight: 600;
  min-width: 160px;
  height: 45px;
  cursor: pointer;
}

.c0:disabled {
  cursor: default;
  background-color: white color:#6b7882;
}

<button
  className="c0"
>
  Test
</button>
`;

exports[`Button text 1`] = `
.c0 {
  border: none;
  border-radius: 5px;
  background-color: #FFFFFF;
  color: #000000;
  text-transform: uppercase;
  font-weight: 600;
  min-width: 10px;
  height: 45px;
  cursor: pointer;
}

.c0:disabled {
  cursor: default;
  background-color: white color:#6b7882;
}

<button
  className="c0"
>
  Test
</button>
`;
